pom file enhancements
Make it work both with java -jar and mvn javafx:run.